Bug 458044 - Doesn't build with qgpgme 1.18.0
Summary: Doesn't build with qgpgme 1.18.0
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.22.220800
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-18 20:16 UTC by Felix Yan
Modified: 2022-08-21 04:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Yan 2022-08-18 20:16:36 UTC
QGpgME no longer provides "RefreshOpenPGPKeysJob" and breaks build of kleopatra:

 /build/kleopatra/src/kleopatra-22.08.0/src/commands/refreshcertificatecommand.cpp:22:10: fatal error: QGpgME/RefreshOpenPGPKeysJob: No such file or directory                                                                                                
    22 | #include <QGpgME/RefreshOpenPGPKeysJob>                                                                                                                                                                                                              
       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                                                                                                                                                                                              
 compilation terminated.
Comment 1 Felix Yan 2022-08-18 20:33:40 UTC
Actually 22.08.0 is affected but I didn't find it in the dropdown menu.

Git master should have been resolved by https://invent.kde.org/pim/kleopatra/-/commit/87d8b00d4b2286489d5fadc9cfa07f1d721cdfe3

Sorry for the noise!
Comment 2 Ingo Klöcker 2022-08-19 11:43:58 UTC
Git commit a3684049dd4f0d2d47dcc6605ff31ce753254ef9 by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 19/08/2022 at 11:43.
Pushed by kloecker into branch 'release/22.08'.

Use ReceiveKeysJob for refreshing OpenPGP keys

This refreshes the OpenPGP key from the configured key server.

GnuPG-bug-id: 5903

CHANGELOG: Fix building against QGpgME 1.18.0
FIXED-IN: 22.08.1

(cherry picked from commit 87d8b00d4b2286489d5fadc9cfa07f1d721cdfe3)

M  +6    -6    src/commands/refreshcertificatecommand.cpp

https://invent.kde.org/pim/kleopatra/commit/a3684049dd4f0d2d47dcc6605ff31ce753254ef9