Use ReceiveKeysJob for refreshing OpenPGP keys

This refreshes the OpenPGP key from the configured key server.

GnuPG-bug-id: 5903

CHANGELOG: Fix building against QGpgME 1.18.0
BUG: 458044
FIXED-IN: 22.08.1

(cherry picked from commit 87d8b00d4b2286489d5fadc9cfa07f1d721cdfe3)